--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -7,6 +7,7 @@
     <h3>Submit your lab values</h2>
     
   </div>
+  <div class="container-fluid">
   <div class="card">  
     <div class="card-body">
   <div class="col-md-3 order-md-1">
@@ -39,6 +40,7 @@
         Total hours water-only fasted before this test:
 <input type="number" class="form-control" required name="hours_fasted">
 </div>
+<p>
 </div>
     <div class="row">
         <div class="col-md-3 mb-3">
@@ -110,5 +112,5 @@
     </form>
   </div>
   </div>
-  
+</div>
 {% endblock %}
