--- a/templates/query.html
+++ b/templates/query.html
@@ -7,6 +7,7 @@
     <h3>Select your variables</h2>
     
   </div>
+<div class="container-fluid">
   <div class="card">  
     <div class="card-body">
 <div class="col-md-3 order-md-1">
@@ -73,6 +74,7 @@
 
     </div>
 </form>
+</div>
 </div>
 </div>
 {% endblock %}
