Changed rounding to be done in SQL query

--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -55,27 +55,27 @@
 						<tbody>
 							<tr>
 							  <th scope="row">Total Cholesterol</th>
-							  <td>{{ (result[0]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[1]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[2]*38.67) | round(1, 'common') }}</td>
+							  <td>{{ (result[0]*38.67) }}</td>
+							  <td>{{ (result[1]*38.67) }}</td>
+							  <td>{{ (result[2]*38.67) }}</td>
 							</tr>
 							<tr>
 							  <th scope="row">LDL Cholesterol</th>
-							  <td>{{ (result[3]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[4]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[5]*38.67) | round(1, 'common') }}</td>
+							  <td>{{ (result[3]*38.67) }}</td>
+							  <td>{{ (result[4]*38.67) }}</td>
+							  <td>{{ (result[5]*38.67) }}</td>
 							</tr>
 							<tr>
 							  <th scope="row">HDL Cholesterol</th>
-							  <td>{{ (result[6]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[7]*38.67) | round(1, 'common') }}</td>
-							  <td>{{ (result[8]*38.67) | round(1, 'common') }}</td>
+							  <td>{{ (result[6]*38.67) }}</td>
+							  <td>{{ (result[7]*38.67) }}</td>
+							  <td>{{ (result[8]*38.67) }}</td>
 							</tr>
 							<tr>
 								<th scope="row">Triglycerides</th>
-								<td>{{ (result[9]*38.67) | round(1, 'common') }}</td>
-								<td>{{ (result[10]*38.67) | round(1, 'common') }}</td>
-								<td>{{ (result[11]*38.67) | round(1, 'common') }}</td>
+								<td>{{ (result[9]*38.67) }}</td>
+								<td>{{ (result[10]*38.67) }}</td>
+								<td>{{ (result[11]*38.67) }}</td>
 							</tr>
 							<tr>
 								<th scope="row">Sample Size</th>
@@ -101,27 +101,27 @@
 						<tbody>
 							<tr>
 							  <th scope="row">Total Cholesterol</th>
-							  <td>{{ (result[0]) | round(1, 'common') }}</td>
-							  <td>{{ (result[1]) | round(1, 'common') }}</td>
-							  <td>{{ (result[2]) | round(1, 'common') }}</td>
+							  <td>{{ (result[0]) }}</td>
+							  <td>{{ (result[1]) }}</td>
+							  <td>{{ (result[2]) }}</td>
 							</tr>
 							<tr>
 							  <th scope="row">LDL Cholesterol</th>
-							  <td>{{ (result[3]) | round(1, 'common') }}</td>
-							  <td>{{ (result[4]) | round(1, 'common') }}</td>
-							  <td>{{ (result[5]) | round(1, 'common') }}</td>
+							  <td>{{ (result[3]) }}</td>
+							  <td>{{ (result[4]) }}</td>
+							  <td>{{ (result[5]) }}</td>
 							</tr>
 							<tr>
 							  <th scope="row">HDL Cholesterol</th>
-							  <td>{{ (result[6]) | round(1, 'common') }}</td>
-							  <td>{{ (result[7]) | round(1, 'common') }}</td>
-							  <td>{{ (result[8]) | round(1, 'common') }}</td>
+							  <td>{{ (result[6]) }}</td>
+							  <td>{{ (result[7]) }}</td>
+							  <td>{{ (result[8]) }}</td>
 							</tr>
 							<tr>
 								<th scope="row">Triglycerides</th>
-								<td>{{ (result[9]) | round(1, 'common') }}</td>
-								<td>{{ (result[10]) | round(1, 'common') }}</td>
-								<td>{{ (result[11]) | round(1, 'common') }}</td>
+								<td>{{ (result[9]) }}</td>
+								<td>{{ (result[10]) }}</td>
+								<td>{{ (result[11]) }}</td>
 							</tr>
 							<tr>
 								<th scope="row">Sample Size</th>
